--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
 
     <!------------------------------------------------------ table for games ---------------------------------------------------------------------------->
 
-    <div class="flex-container">
-      <div class="col-6">
+    <div class="container">
+      <div class=" d-flex col-6">
         <table class="table table-striped">
           <thead>
             <tr>
@@ -345,7 +345,7 @@
               <td>Nice games</td>
               <td>€39</td>
               <td>
-                <button type="button" class="btn btn-info">Info</button>
+                <button type="button" class="btn btn-info">Buy</button>
               </td>
             </tr>
             <tr class="tables-rows">
@@ -353,7 +353,7 @@
               <td>Fun Games</td>
               <td>€49</td>
               <td>
-                <button type="button" class="btn btn-info">Info</button>
+                <button type="button" class="btn btn-info">Buy</button>
               </td>
             </tr>
             <tr class="tables-rows">
@@ -361,13 +361,13 @@
               <td>Games</td>
               <td>€19</td>
               <td>
-                <button type="button" class="btn btn-info">Info</button>
+                <button type="button" class="btn btn-info">Buy</button>
               </td>
             </tr>
           </tbody>
         </table>
       </div>
-      <!---------------------------------------- adjacent col of pics-->
+      <!---------------------------------------- adjacent col of pics --------------------------------------------------------------->
       <div class="col-6">
       
       <div class="container">
